@@ -273,9 +273,14 @@
 #define EXTRF	1
 #define PORF	0
 
+/* 
+   The ADHSM bit has been removed from all documentation, 
+   as being not needed at all since the comparator has proven 
+   to be fast enough even without feeding it more power.
+*/
+
 /* SFIOR */
 /* bits 7-5 reserved */
-#define ADHSM	4
 #define ACME	3
 #define PUD	2
 #define PSR2	1
